--- a/style.scss
+++ b/style.scss
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 #widget{
-    width: 30%;
+    width: 450px;
     height: auto;
     text-align: center;
     margin: auto;
